[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bili-comments"
version = "0.1.0"
description = "Anonymous CLI collector for public first-level Bilibili comments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
bili-comments = "bili_comments.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bili_comments"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
