[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bili-comments"
version = "0.5.0"
description = "Anonymous CLI framework for public Bilibili video and comment data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]
parquet = ["pyarrow>=18,<22"]
analysis = ["jieba>=0.42.1,<1"]

[project.scripts]
bili-comments = "bili_comments.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bili_comments"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "parquet: tests requiring the optional pyarrow dependency",
    "analysis: tests requiring the optional jieba dependency",
]
